refactor: remove trailing whitespaces

--- a/index.html
+++ b/index.html
@@ -41,11 +41,11 @@
             <section class="contacts-section">
                 <h2 id="contacts">Contacts:</h2>
                     <ul class="contact-list">
-                        <li class="contact-item"><a href="mailto:vending.mp@gmail.com">E-mail: vending.mp@gmail.com</a></li>
-                        <li class="contact-item"><a href="tel:+380634928856">Phone: +380634928856</a></li>
-                        <li class="contact-item"><a href="https://github.com/Masyata">GitHub: Masyata</a></li>
+                        <li class="contact-item"><a href="mailto:vending.mp@gmail.com">E-mail:&nbspvending.mp@gmail.com</a></li>
+                        <li class="contact-item"><a href="tel:+380634928856">Phone:&nbsp+380634928856</a></li>
+                        <li class="contact-item"><a href="https://github.com/Masyata">GitHub:&nbspMasyata</a></li>
                     </ul>
-            </section>    
+            </section>
 
             <section class="summary-section">
                 <h2 id="summary">Summary:</h2>
@@ -56,9 +56,9 @@
                 <h2 id="skills">Skills:</h2>
                 <ul class="skills-list">
                     <li class="skills-item">HTML5</li>
-                    <li class="skills-item">CSS3</li> 
-                    <li class="skills-item">JavaScript Basics</li> 
-                    <li class="skills-item">Git, GitHub</li> 
+                    <li class="skills-item">CSS3</li>
+                    <li class="skills-item">JavaScript Basics</li>
+                    <li class="skills-item">Git, GitHub</li>
                     <li class="skills-item">VS Code</li>
                 </ul>
             </section>
@@ -68,9 +68,9 @@
                 <div class="code-container">
                     <code>
                         function multiply(a, b) { <br>
-                            &nbsp;&nbsp;&nbsp;&nbsp;return a * b; <br>  
+                            &nbsp;&nbsp;&nbsp;&nbsp;return a * b; <br>
                         }
-                    </code> 
+                    </code>
                 </div>
             </section>
 
@@ -87,13 +87,13 @@
                     <li class="languages-item">Ukrainian – native speaker</li>
                     <li class="languages-item">Russian – native speaker</li>
                     <li class="languages-item">English – intermediate+</li>
-                </ul></section>   
+                </ul></section>
         </main>
 
         <footer class="footer">
             <a class="git-link" href="https://github.com/Masyata">Masyata</a>
-            <div class="data">&copy; 2022</div> 
-            <a class="rsschool-link" href="https://rs.school/js/"><img src="https://rs.school/images/rs_school_js.svg" height=70 width=100 alt="rs_school_logo"></a>   
+            <div class="data">&copy; 2022</div>
+            <a class="rsschool-link" href="https://rs.school/js/"><img src="https://rs.school/images/rs_school_js.svg" height="70" width="100" alt="rs_school_logo"></a>
         </footer>
 
     </div>
