refactor: correct whitespaces

--- a/index.html
+++ b/index.html
@@ -41,9 +41,9 @@
             <section class="contacts-section">
                 <h2 id="contacts">Contacts:</h2>
                     <ul class="contact-list">
-                        <li class="contact-item"><a href="mailto:vending.mp@gmail.com">E-mail:&nbspvending.mp@gmail.com</a></li>
-                        <li class="contact-item"><a href="tel:+380634928856">Phone:&nbsp+380634928856</a></li>
-                        <li class="contact-item"><a href="https://github.com/Masyata">GitHub:&nbspMasyata</a></li>
+                        <li class="contact-item"><a href="mailto:vending.mp@gmail.com">E-mail:&nbsp;vending.mp@gmail.com</a></li>
+                        <li class="contact-item"><a href="tel:+380634928856">Phone:&nbsp;+380634928856</a></li>
+                        <li class="contact-item"><a href="https://github.com/Masyata">GitHub:&nbsp;Masyata</a></li>
                     </ul>
             </section>
 
